Fix the previous button causing the screen to stretch

--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -849,3 +849,26 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
     margin: 0px;
     margin-bottom: -3px;
 }
+
+ .personInfo {
+        background: rgba(240, 240, 240, .99);
+        width: 400px;
+        height: 260px;
+        padding: 7px;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 4px 7px 5px 2px rgba(200, 200, 200, 0.1);
+        border: 1px solid rgb(168, 168, 168);
+        border-radius: 10px;
+        display: none;
+        position: absolute;
+}
+
+#findPersonForm .form-control-feedback {
+     right: 15px;
+}
+
+#findPersonForm .selectContainer .form-control-feedback {
+     right: 25px;
+}
